Adjust routes for reverse proxying

--- a/inquisitor/templates/feed.html
+++ b/inquisitor/templates/feed.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="/feed.css" />
+		<link rel="stylesheet" type="text/css" href="../feed.css" />
 		<script>
 			var deactivate = function (source, itemid) {
-				fetch('/deactivate/', {
+				fetch('deactivate/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json; charset=UTF-8',
