Fix wrong time field in item info

--- a/inquisitor/templates/feed.html
+++ b/inquisitor/templates/feed.html
@@ -38,7 +38,7 @@
 				<span class="item-title">{{item.title}}</span><br>
 				{% endif %}
 				<span class="item-info">{{item.time_readable}} {{item.author}}</span><br>
-				<span class="item-info">{{item.source}} {{item.id}} {{item.time_readable}}</span>
+				<span class="item-info">{{item.source}} {{item.id}} {{item.created}}</span>
 			</div>
 			{% endfor %}
 			{% else %}
