--- a/inquisitor/resources/feed.css
+++ b/inquisitor/resources/feed.css
@@ -7,6 +7,7 @@ div#wrapper {
 	border-radius: 6px;
 	padding: 5px;
 	margin-bottom: 20px;
+	word-break: break-word;
 }
 .item-title {
 	font-size: 1.4em;
@@ -26,6 +27,9 @@ div#wrapper {
 }
 .item-info {
 	color: rgba(0, 0, 0, 0.7);
+}
+.readable-item img {
+	max-width: 100%;
 }
 button, summary {
 	cursor: pointer;
