--- a/inquisitor/templates/feed.html
+++ b/inquisitor/templates/feed.html
@@ -34,7 +34,7 @@
 		</style>
 		<script>
 			var deactivate = function (source, itemid) {
-				fetch('deactivate/', {
+				fetch('/deactivate/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json; charset=UTF-8',
@@ -50,7 +50,7 @@
 				});
 			};
 			var punt = function (source, itemid) {
-				fetch('punt/', {
+				fetch('/punt/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json; charset=UTF-8',
@@ -66,7 +66,7 @@
 				});
 			};
 			var mdeactivate = function (items) {
-				fetch('mass-deactivate/', {
+				fetch('/mass-deactivate/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json; charset=UTF-8',
@@ -78,7 +78,7 @@
 				});
 			};
 			var callback = function (source, itemid) {
-				fetch('callback/', {
+				fetch('/callback/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json; charset=UTF-8',
