--- a/inquisitor/templates/feed.jinja2
+++ b/inquisitor/templates/feed.jinja2
@@ -28,6 +28,7 @@
 			.item-info { color: rgba(0, 0, 0, 0.7); }
 			.readable-item img { max-width: 100%; }
 			button, summary { cursor: pointer; }
+			summary { display: block; }
 			summary:focus { outline: 1px dotted gray; }
 			.strikethru span, .strikethru p { text-decoration: line-through; }
 			.fade span, .fade p { color: rgba(0, 0, 0, 0.2); }
